# dsc288_capstone

./: pyproject.toml  run_pipeline.py  step0_tasklist.md  supermag_substorms.csv
archive/scripts/: retrieve_goes_modern.py  validate_feature_matrix.py  validate_sources_v2.py  verify_viresclient.py
configs/: data_retrieval.yaml  feature_engineering.yaml  model_baseline.yaml
configs/experiments/: exp001_lstm_baseline.yaml
docs/architecture/: data_pipeline.md  goes_unified.md  leakage_prevention.md  leo_index_strategy.md  target_variable.md  temporal_validation.md
docs/research/: all_station_names.md  fourier_analysis.md  lag_analysis.md  papers_summary.md  potential_features.md
milestone1/: milestone1.tex  milestone1_outline.md
milestone2/: eda_tips.md  feature_engineering_tips.md  intermediate_report.md  milestone2_checkpoints.md  milestone2_master_plan.md  milestone2_outline.md  milestone2_rubric.md  model_selection_tips.md  teammember_grades.tex
notebooks/: 03_leo_index_validation.ipynb
scripts/: 01_download_data.py  02_build_features.py  03_build_sequences.py  04_train_baseline.py  05_evaluate_model.py  baseline_model.py  build_feature_matrix.py  build_sequences.py  canary.py  canary_goes.py  check_schema.py  compute_leo_index.py  reproduce_paper.sh  retrieve_goes.py  retrieve_goes_legacy.py  retrieve_omni.py  retrieve_supermag.py  retrieve_swarm.py  validate_sources.py
scripts/tests/: test_slice1.py
src/: config.py  logger.py  newell_coupling.py  schema.py  station_context.py
tests/: conftest.py  test_refactor_units.py  test_validate_phase_shift.py
(+93 files in other folders)
