[project]
name = "msmf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apexpy>=2.1.0",
    "boto3>=1.42.78",
    "cdasws>=1.8.12",
    "chaosmagpy>=0.13.1",
    "dask[complete]>=2026.3.0",
    "h5py>=3.15.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.3",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.3.3",
    "ppigrf>=2.1.0",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.14.10",
    "s3fs>=0.4.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "shap>=0.49.1",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "viresclient>=0.14.1",
    "xarray>=2025.12.0",
    "xgboost>=3.2.0",
]
